saves/test/demo_full_20240802_193545/popcount3/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp popcount3_tb.v popcount3.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
popcount3_tb.v:64: $finish called at 8000 (1ps)

iverilog cmd 2 error:

